--- a/competition-files/mini-competition.Rmd
+++ b/competition-files/mini-competition.Rmd
@@ -3,10 +3,9 @@ title: "Linear Regression Mini-competition"
 output: github_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-- Reading the excel data and understanding the data, variables in survey
+### INPUT variables according to the survey
+---
+Reading the excel data and understanding the data, variables in survey
 BASMID: A unique identifier for each record
 ALLGRADEX: Grade level
 EDCPUB: Education in public school (binary variable: 1 = Yes, 2 = No)
@@ -44,3 +43,159 @@ FHCAMT: Monthly mortgage payment
 FHPLACE: Location of the household
 FHCHECKX: Housing check (binary variable: 1 = Yes, 2 = No)
 FHHELP: Housing help received (binary variable: 1 = Yes, 2 = No
+---
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+##Step1 : Load all the required libraries and check packages installed.
+
+```{r}
+library(tidyverse)
+library(tidymodels)
+library(stats)
+#install.packages("tidyverse")
+#install.packages("tidymodels")
+#install.packages("ggplot2")
+library(ggplot2)
+library(readxl)
+```
+
+### Step2: load the excel data from local machine
+
+```{r}
+library(readxl)
+
+Testdata <- read_excel("/Users/saranyat/Downloads/Dataset.xlsx",sheet = "curated_2019",n_max = 20)
+
+Testdata
+
+```
+
+## To analyse the data and know the dimensions
+
+```{r}
+head(Testdata)
+
+```
+## TO remove the missing and bad data from the excel loaded data
+
+```{r}
+Testdata <- na.omit(Testdata)
+```
+
+### Determing the Target and predictor variables
+
+- The factors that would impact the student success involves school choice
+- family engagement in school activities and family engagement in homework
+- According to the project requirement the following set of variables can be used as predictor and target variables - 
+- Predictor Variables =SCCHOICE SCONSIDR FCSUPPRT FCSTDS FSNOTESX FSCOUNSLR FSPTMTNG
+- Target Variables = ALLGRADEX SEGRADES SEGRADEQ
+- CASE 1 Target Variables = ALLGRADEX
+
+```{r}
+#predictor variables as needed
+X <- Testdata[, c("SCCHOICE","SCONSIDR", "FCSUPPRT", "FCSTDS", "FSNOTESX", "FSCOUNSLR", "FSPTMTNG")]
+
+#Target variable
+
+Y <- Testdata$SEGRADES
+
+```
+
+
+### Split the dataset into training and testing sets. 
+- The training set will be used to train the regression model
+- The testing set will be used to evaluate its performance.
+
+
+```{r}
+set.seed(123)  # For reproducibility
+train_indices <- sample(1:nrow(Testdata), 0.8 * nrow(Testdata))  
+# 80% of the data for training
+training_data <- Testdata[train_indices, ]
+testing_data <- Testdata[-train_indices, ]
+
+```
+
+## Fitting and Building the regression model
+
+
+
+
+
+```{r}
+
+#Convert the variables to factors:
+
+Testdata$SCCHOICE <- as.factor(Testdata$SCCHOICE)
+Testdata$SCONSIDR <- as.factor(Testdata$FSCOUNSLR)
+Testdata$SCONSIDR <- as.factor(Testdata$SCHLHRSWK)
+
+```
+
+
+```{r}
+
+# Check the unique values of SCCHOICE and SCONSIDR
+unique(Testdata$SCCHOICE)
+unique(Testdata$FSCOUNSLR)
+unique(Testdata$SCHLHRSWK)
+
+```
+
+
+```{r}
+library(GGally)
+
+# Subset the data with predictor and target variables
+subset_data <- Testdata[c("SCCHOICE", "FSCOUNSLR", "SCHLHRSWK", "ALLGRADEX", "SEGRADES", "SEGRADEQ")]
+
+# Create the ggpairs plot
+ggpairs(subset_data, columns = 1:3)
+
+
+```
+
+```{r}
+# Construct the multiple linear regression model
+mlr_model1 <- lm(cbind(ALLGRADEX) ~ SCCHOICE + FSCOUNSLR + SCHLHRSWK, data = Testdata)
+
+# Print the summary of the model
+summary(mlr_model1)
+
+```
+
+
+```{r}
+# Construct the multiple linear regression model
+mlr_model2 <- lm(cbind(SEGRADES) ~ SCCHOICE + FSCOUNSLR + SCHLHRSWK, data = Testdata)
+
+# Print the summary of the model
+summary(mlr_model2)
+
+
+```
+
+```{r}
+# Construct the multiple linear regression model
+mlr_model3 <- lm(cbind(SEGRADEQ) ~ SCCHOICE + FSCOUNSLR + SCHLHRSWK, data = Testdata)
+
+# Print the summary of the model
+summary(mlr_model3)
+
+
+```
+
+```{r}
+
+# Perform ANOVA to compare the models
+anova_result <- anova(mlr_model1, mlr_model2, mlr_model3)
+print(anova_result)
+
+
+```
+
+
